# packages/auth/src/controllers/auth.controller.ts
@@ -3,7 +3,7 @@ import { PATH_AUTH } from "../routes/path-defs";
 import { authLoginSchema, userValidateSchema } from "../schemas/auth-validate";
 import { AuthServices } from "../services/auth-services";
 import StatusCode from "../utils/http-status-code";
-import { Login, ResetPassword, User } from "../@types/user.type";
+import { IUser, Login, ResetPassword, UserSignup } from "../@types/user.type";
 import {
   Get,
   Post,
@@ -19,17 +19,16 @@ import { SendVerifyEmailService } from "../services/verify-email-services";
 
 @Route("/api/v1")
 export class AuthController extends Controller {
-
   @Post(PATH_AUTH.signUp)
   @SuccessResponse(StatusCode.CREATED, "Created")
   @Middlewares(zodValidate(userValidateSchema))
-  public async Singup(@Body() requestBody: User): Promise<{message: string}>{
-    const {firstname , lastname , email , password } = requestBody;
+  public async Singup(@Body() requestBody: UserSignup): Promise<{ message: string }> {
+    const { firstname, lastname, email, password } = requestBody;
     try {
       const authService = new AuthServices();
-      await authService.Signup({firstname , lastname , email , password});
+      await authService.Signup({ firstname, lastname, email, password });
 
-      return {message: "please verify your Email!"}
+      return { message: "please verify your Email!" };
     } catch (error) {
       throw error;
     }
@@ -39,12 +38,17 @@ export class AuthController extends Controller {
   @SuccessResponse(StatusCode.OK, "OK")
   public async VerifySignupEmail(
     @Query() token: string
-  ): Promise<{data: any , token: string}>{
+  ): Promise<{ message: string; data: IUser; token: string }> {
     try {
-      const verifyService = new SendVerifyEmailService()
+      const verifyService = new SendVerifyEmailService();
       const user = await verifyService.VerifyEmailToken(token);
 
-      return user
+      const { firstname, lastname, email, picture } = user.data;
+      return {
+        message: "Success verified",
+        data: { firstname, lastname, email, picture },
+        token: user.token,
+      };
     } catch (error: unknown) {
       throw error;
     }
@@ -52,14 +56,16 @@ export class AuthController extends Controller {
 
   @SuccessResponse(StatusCode.OK, "OK")
   @Get(PATH_AUTH.verifyResetPassword)
-  async VerifyResetPasswordEmail (@Query() token: string): Promise<{message: string}>{
-    try{
+  async VerifyResetPasswordEmail(
+    @Query() token: string
+  ): Promise<{ message: string }> {
+    try {
       const verifyService = new SendVerifyEmailService();
       const user = await verifyService.VerifyResetPasswordToken(token);
 
-      return user
-    }catch(error: unknown){
-      throw error
+      return user;
+    } catch (error: unknown) {
+      throw error;
     }
   }
 
@@ -68,13 +74,17 @@ export class AuthController extends Controller {
   @Middlewares(zodValidate(authLoginSchema))
   public async Login(
     @Body() requestBody: Login
-  ): Promise<{data: object , token: string}> {
-    const { email, password } = requestBody;
+  ): Promise<{ message: string; data: IUser; token: string }> {
     try {
       const authService = new AuthServices();
-      const user = await authService.Login({email , password})
+      const user = await authService.Login(requestBody);
 
-      return user
+      const { firstname, lastname, email, picture } = user.data as IUser;
+      return {
+        message: "Success login",
+        data: { firstname, lastname, email, picture },
+        token: user.token,
+      };
     } catch (error) {
       throw error;
     }
@@ -82,12 +92,19 @@ export class AuthController extends Controller {
 
   @SuccessResponse(StatusCode.OK, "OK")
   @Post(PATH_AUTH.googleOAuthCallBack)
-  async GoogleOAuth(@Query() code: string): Promise<{data: object , token: string}> {
+  async GoogleOAuth(
+    @Query() code: string
+  ): Promise<{ message: string; data: IUser; token: string }> {
     try {
       const authService = new AuthServices();
       const user = await authService.SigninWithGoogleCallBack(code);
 
-      return user
+      const { firstname, lastname, email, picture } = user.data as IUser;
+      return {
+        message: "Success signup",
+        data: { firstname, lastname, email, picture },
+        token: user.token,
+      };
     } catch (error) {
       throw error;
     }
@@ -95,12 +112,19 @@ export class AuthController extends Controller {
 
   @SuccessResponse(StatusCode.OK, "OK")
   @Post(PATH_AUTH.facebookOAuthCallBack)
-  async FacebookOAuth(@Query() code: string): Promise<any> {
+  async FacebookOAuth(
+    @Query() code: string
+  ): Promise<{ message: string; data: IUser; token: string }> {
     try {
       const authService = new AuthServices();
       const user = await authService.SigninWithFacebookCallBack(code);
-      
-      return user
+
+      const { firstname, lastname, email, picture } = user.data;
+      return {
+        message: "Success signup",
+        data: { firstname, lastname, email, picture },
+        token: user.token,
+      };
     } catch (error) {
       throw error;
     }
@@ -108,29 +132,33 @@ export class AuthController extends Controller {
 
   @SuccessResponse(StatusCode.OK, "OK")
   @Post(PATH_AUTH.requestResetPassword)
-  async RequestResetPassword(@Body() requestBody: {email: string}){
-    const {email} = requestBody
-    try{
+  async RequestResetPassword(
+    @Body() requestBody: { email: string }
+  ): Promise<{ message: string }> {
+    const { email } = requestBody;
+    try {
       const service = new AuthServices();
-      const user = await service.RequestResetPassword({email});
-      return user
-    }catch(error: unknown){
-      throw error
+      await service.RequestResetPassword({ email });
+      return { message: "Success verified" };
+    } catch (error: unknown) {
+      throw error;
     }
   }
-  
+
   @SuccessResponse(StatusCode.OK, "OK")
   @Post(PATH_AUTH.ResetPassword)
-  async ConfirmResetPassword (@Body() requestBody: ResetPassword , @Header("authorization") token: string){
-    const userData = {token , ...requestBody}
-    try{
+  async ConfirmResetPassword(
+    @Body() requestBody: ResetPassword,
+    @Header("authorization") token: string
+  ): Promise<{ message: string }> {
+    const userData = { token, ...requestBody };
+    try {
       const service = new AuthServices();
-      const newUser = await service.ConfirmResetPassword(userData);
+      await service.ConfirmResetPassword(userData);
 
-      return newUser
-    }catch(error: unknown){
-      throw error
+      return { message: "Success reset password" };
+    } catch (error: unknown) {
+      throw error;
     }
   }
-
 }
